Working on assignment

--- a/pyStats.ipynb
+++ b/pyStats.ipynb
@@ -1,9 +1,323 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9adca200-7619-4d50-b4f5-448a2b183147",
+   "metadata": {},
+   "source": [
+    "# Python Stats assignment "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2534d3bd-9f25-4e01-b2c9-5be6f859b1f6",
+   "metadata": {},
+   "source": [
+    "## Elijah Blige"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "351c8b1f-90cd-4387-9161-ff716647b950",
+   "metadata": {},
+   "source": [
+    "## Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dabcc723-aeea-4a30-a410-d2ce312ac8e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "106035d7-ce8f-4172-a992-fe34d24d1c6e",
+   "metadata": {},
+   "source": [
+    "## Reading in the data and printing top of data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a81375d4-95f8-4a77-99fa-a88badec9193",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Unnamed: 0  Gender  FSIQ  VIQ  PIQ  Weight  Height  MRI_Count\n",
+      "0           1  Female   133  132  124   118.0    64.5     816932\n",
+      "1           2    Male   140  150  124     NaN    72.5    1001121\n",
+      "2           3    Male   139  123  150   143.0    73.3    1038437\n",
+      "3           4    Male   133  129  128   172.0    68.8     965353\n",
+      "4           5  Female   137  132  134   147.0    65.0     951545\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"brain_size.csv\",sep=';', na_values=\".\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65954626-199a-467a-84e4-8fe057375f14",
+   "metadata": {},
+   "source": [
+    "## Creating 3 example arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ff445d3b-f5e2-4cf0-9abe-f092e3d149d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = np.linspace(-6, 6, 20)\n",
+    "sin_t = np.sin(t)\n",
+    "cos_t = np.cos(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8166732-ca5e-4d31-acba-a75b48bef813",
+   "metadata": {},
+   "source": [
+    "## Creating a dataframe using the 3 example arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ac7dad94-f4ea-4c02-b274-1c8777e31201",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t</th>\n",
+       "      <th>sin</th>\n",
+       "      <th>cos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-6.000000</td>\n",
+       "      <td>0.279415</td>\n",
+       "      <td>0.960170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-5.368421</td>\n",
+       "      <td>0.792419</td>\n",
+       "      <td>0.609977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-4.736842</td>\n",
+       "      <td>0.999701</td>\n",
+       "      <td>0.024451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-4.105263</td>\n",
+       "      <td>0.821291</td>\n",
+       "      <td>-0.570509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-3.473684</td>\n",
+       "      <td>0.326021</td>\n",
+       "      <td>-0.945363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-2.842105</td>\n",
+       "      <td>-0.295030</td>\n",
+       "      <td>-0.955488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-2.210526</td>\n",
+       "      <td>-0.802257</td>\n",
+       "      <td>-0.596979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-1.578947</td>\n",
+       "      <td>-0.999967</td>\n",
+       "      <td>-0.008151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.947368</td>\n",
+       "      <td>-0.811882</td>\n",
+       "      <td>0.583822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-0.315789</td>\n",
+       "      <td>-0.310567</td>\n",
+       "      <td>0.950551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>0.310567</td>\n",
+       "      <td>0.950551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.947368</td>\n",
+       "      <td>0.811882</td>\n",
+       "      <td>0.583822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1.578947</td>\n",
+       "      <td>0.999967</td>\n",
+       "      <td>-0.008151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2.210526</td>\n",
+       "      <td>0.802257</td>\n",
+       "      <td>-0.596979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2.842105</td>\n",
+       "      <td>0.295030</td>\n",
+       "      <td>-0.955488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>3.473684</td>\n",
+       "      <td>-0.326021</td>\n",
+       "      <td>-0.945363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>4.105263</td>\n",
+       "      <td>-0.821291</td>\n",
+       "      <td>-0.570509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>4.736842</td>\n",
+       "      <td>-0.999701</td>\n",
+       "      <td>0.024451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>5.368421</td>\n",
+       "      <td>-0.792419</td>\n",
+       "      <td>0.609977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>-0.279415</td>\n",
+       "      <td>0.960170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           t       sin       cos\n",
+       "0  -6.000000  0.279415  0.960170\n",
+       "1  -5.368421  0.792419  0.609977\n",
+       "2  -4.736842  0.999701  0.024451\n",
+       "3  -4.105263  0.821291 -0.570509\n",
+       "4  -3.473684  0.326021 -0.945363\n",
+       "5  -2.842105 -0.295030 -0.955488\n",
+       "6  -2.210526 -0.802257 -0.596979\n",
+       "7  -1.578947 -0.999967 -0.008151\n",
+       "8  -0.947368 -0.811882  0.583822\n",
+       "9  -0.315789 -0.310567  0.950551\n",
+       "10  0.315789  0.310567  0.950551\n",
+       "11  0.947368  0.811882  0.583822\n",
+       "12  1.578947  0.999967 -0.008151\n",
+       "13  2.210526  0.802257 -0.596979\n",
+       "14  2.842105  0.295030 -0.955488\n",
+       "15  3.473684 -0.326021 -0.945363\n",
+       "16  4.105263 -0.821291 -0.570509\n",
+       "17  4.736842 -0.999701  0.024451\n",
+       "18  5.368421 -0.792419  0.609977\n",
+       "19  6.000000 -0.279415  0.960170"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({'t': t, 'sin': sin_t, 'cos': cos_t})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cea7a28c-e623-4f3b-86dc-192ef9c77931",
+   "metadata": {},
+   "source": [
+    "## Look at the dataframe's dimesions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "71edd7c9-a738-4aca-be31-21cb3f30a2a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40, 8)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e102e132-218a-4458-9e8c-72985c05c843",
+   "id": "c0df39b0-0d34-40d8-b8f5-8cad09698e0e",
    "metadata": {},
    "outputs": [],
    "source": []
