Working on assignment

--- a/pyStats.ipynb
+++ b/pyStats.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "dabcc723-aeea-4a30-a410-d2ce312ac8e9",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "ac7dad94-f4ea-4c02-b274-1c8777e31201",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "19  6.000000 -0.279415  0.960170"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,9 +315,329 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b3e0f56-6487-4a7f-8c9b-4dca32d662ae",
+   "metadata": {},
+   "source": [
+    "## Look at the columns of the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bbc924c6-6998-4f76-854e-e4dac7e1c7f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'Gender', 'FSIQ', 'VIQ', 'PIQ', 'Weight', 'Height',\n",
+       "       'MRI_Count'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e8833e2-6513-4519-a51e-0171948f2306",
+   "metadata": {},
+   "source": [
+    "## Printing out the top gender column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f4d5b4cc-a7e4-4cb2-8769-a5b3cb7fb50e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    Female\n",
+      "1      Male\n",
+      "2      Male\n",
+      "3      Male\n",
+      "4    Female\n",
+      "Name: Gender, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Gender'].head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64df9736-69ec-4c98-b033-f273b542d19c",
+   "metadata": {},
+   "source": [
+    "## Taking the mean VIQ for females in the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "45bcdb6c-33f2-4daa-a88b-0a3d0160f30e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(109.45)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Gender'] == 'Female']['VIQ'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4bdafe3-1b32-4871-bd08-842bbbd72398",
+   "metadata": {},
+   "source": [
+    "## Grouping the dataframe by gender and taking the mean VIQ for both genders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3854cf8d-8905-4730-91c3-36edeee6e0b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Female', np.float64(109.45))\n",
+      "('Male', np.float64(115.25))\n"
+     ]
+    }
+   ],
+   "source": [
+    "groupby_gender = df.groupby('Gender')\n",
+    "for gender, value in groupby_gender['VIQ']:\n",
+    "    print((gender, value.mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ef1e9d3-aa12-411e-a900-ff16b1f30db2",
+   "metadata": {},
+   "source": [
+    "## Taking the mean for all stats for both genders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f65fd3be-2114-480f-bb2a-33910a19c32d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>FSIQ</th>\n",
+       "      <th>VIQ</th>\n",
+       "      <th>PIQ</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>MRI_Count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>19.65</td>\n",
+       "      <td>111.9</td>\n",
+       "      <td>109.45</td>\n",
+       "      <td>110.45</td>\n",
+       "      <td>137.200000</td>\n",
+       "      <td>65.765000</td>\n",
+       "      <td>862654.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>21.35</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>115.25</td>\n",
+       "      <td>111.60</td>\n",
+       "      <td>166.444444</td>\n",
+       "      <td>71.431579</td>\n",
+       "      <td>954855.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0   FSIQ     VIQ     PIQ      Weight     Height  MRI_Count\n",
+       "Gender                                                                     \n",
+       "Female       19.65  111.9  109.45  110.45  137.200000  65.765000   862654.6\n",
+       "Male         21.35  115.0  115.25  111.60  166.444444  71.431579   954855.4"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groupby_gender.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6ea3e9e-f52a-40df-8ef5-193f972ddf41",
+   "metadata": {},
+   "source": [
+    "## Calculating the mean VIQ for the full population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d27e3b03-b5f5-46f7-9441-67c2b533ec22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean VIQ for the gull population is 112.35\n"
+     ]
+    }
+   ],
+   "source": [
+    "meanVIQ = df[\"VIQ\"].mean()\n",
+    "print(\"The mean VIQ for the gull population is\",meanVIQ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddc44c35-75c5-49cb-b9ff-72ef8c240327",
+   "metadata": {},
+   "source": [
+    "## Counting the number of males and females in the study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a43ecd07-f662-4436-8978-2c6fb24c116e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of females that participating in the study is 20\n",
+      "The number of Males that participating in the study is 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "numF = len(df[df['Gender'] == 'Female'])\n",
+    "numM = len(df[df['Gender'] == 'Male'])\n",
+    "print(\"The number of females that participating in the study is\",numF)\n",
+    "print(\"The number of Males that participating in the study is\",numM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fa79d4e-68ab-4a92-82ee-b0a7078ccee8",
+   "metadata": {},
+   "source": [
+    "## Calculating the average MRI counts for both males and females"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0df39b0-0d34-40d8-b8f5-8cad09698e0e",
+   "id": "9b25db44-d869-45e1-8235-270c36dd9ba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Come back to this not hard just look for log unit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb2a18a1-1521-4d72-aebf-40fa0cb239a3",
+   "metadata": {},
+   "source": [
+    "## Making scatter mattrices of Weight, Height , and MRI Counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "528c9593-2e43-4c9e-8fda-efa11761a636",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pd'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[44], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m plotting\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pd'"
+     ]
+    }
+   ],
+   "source": [
+    "from pd.tools import plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1099b211-6975-48cd-9135-68d8a5f07d43",
    "metadata": {},
    "outputs": [],
    "source": []
