--- a/pyStats.ipynb
+++ b/pyStats.ipynb
@@ -819,9 +819,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d083a93-4b0a-41ab-ae47-6ada474574c9",
+   "metadata": {},
+   "source": [
+    "## 1 sample T test on the difference between FSIQ and PIQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "981780f0-776f-47ac-97a2-214c9d24c93b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=np.float64(1.7842019405859857), pvalue=np.float64(0.08217263818364236), df=np.int64(39))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_1samp(df['FSIQ'] - df['PIQ'], 0) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c441e91e-c78c-427e-87b8-666e19d62152",
+   "metadata": {},
+   "source": [
+    "## Peforming a wilcoxon signed-rank test due to the fact that it does not assume gaussian errors "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bb5faef3-9d42-419f-8f31-f1f11d77bed2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WilcoxonResult(statistic=np.float64(274.5), pvalue=np.float64(0.10659492713506856))"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.wilcoxon(df['FSIQ'], df['PIQ'])   "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2f885da-dc54-44cb-9277-6360e19726ae",
+   "id": "787a7bbe-96ef-410a-bba3-c7abbacf56e6",
    "metadata": {},
    "outputs": [],
    "source": []
