--- a/pyStats.ipynb
+++ b/pyStats.ipynb
@@ -26,15 +26,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "dabcc723-aeea-4a30-a410-d2ce312ac8e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'statsmodels'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m plotting\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m stats\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstatsmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mformula\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ols\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'statsmodels'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pandas import plotting\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "from statsmodels.formula.api import ols"
    ]
   },
   {
@@ -47,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "a81375d4-95f8-4a77-99fa-a88badec9193",
    "metadata": {},
    "outputs": [
@@ -877,9 +890,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "019fa7e3-526d-4bca-a72e-26da3c28af52",
+   "metadata": {},
+   "source": [
+    "## Generating simulated data for the linear modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "68e61264-971e-4a0f-b6ac-09f73a1f5ec7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-5, 5, 20)\n",
+    "np.random.seed(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e10c0c86-3722-4675-b50e-fb137e3511e6",
+   "metadata": {},
+   "source": [
+    "### normal distributed noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "dbbc5d6a-fca5-4949-ad76-539752953d41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = -5 + 3*x + 4 * np.random.normal(size=x.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af60a822-ca6c-41f9-b9c6-2fa523323316",
+   "metadata": {},
+   "source": [
+    "### Create a data frame containing all the relevant variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c7dc70fc-cbb0-4d0c-8599-ec06df968bac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({'x': x, 'y': y})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e08d9ad-8e21-43dc-8633-17b29a64f82a",
+   "metadata": {},
+   "source": [
+    "## Specifing an OLS model and fit it"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "787a7bbe-96ef-410a-bba3-c7abbacf56e6",
+   "id": "c18d6e0b-64a2-41b2-95a0-96bb11806277",
    "metadata": {},
    "outputs": [],
    "source": []
