--- a/pyStats.ipynb
+++ b/pyStats.ipynb
@@ -26,16 +26,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "id": "dabcc723-aeea-4a30-a410-d2ce312ac8e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'urlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[61], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstatsmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mformula\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ols\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01murlib\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'urlib'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pandas import plotting\n",
     "from scipy import stats\n",
-    "from statsmodels.formula.api import ols"
+    "from statsmodels.formula.api import ols\n",
+    "import seaborn\n",
+    "import urlib"
    ]
   },
   {
@@ -1314,12 +1328,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c76cadb1-6cfa-44ff-a374-b3dc55d0cbb4",
+   "cell_type": "markdown",
+   "id": "1c11b697-b792-4c27-8d8b-685a3982335e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Importing and loading the new data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "3432443f-af66-4f79-a3c3-92abd878179e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'urllib' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[60], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwages.txt\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;66;03m# Download the file if it is not present\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m     \u001b[43murllib\u001b[49m\u001b[38;5;241m.\u001b[39murlretrieve(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttp://lib.stat.cmu.edu/datasets/CPS_85_Wages\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      4\u001b[0m                        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwages.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'urllib' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "if not os.path.exists('wages.txt'):\n",
+    "    # Download the file if it is not present\n",
+    "    urllib.urlretrieve('http://lib.stat.cmu.edu/datasets/CPS_85_Wages',\n",
+    "                       'wages.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34127f26-d5c5-4294-a530-445b457e225c",
+   "metadata": {},
+   "source": [
+    "## Pairplot: scatter matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "7636635b-8b9e-45ca-867f-d35cb13971f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepal_length  sepal_width  petal_length  petal_width       name\n",
+      "0             5.1          3.5           1.4          0.2     setosa\n",
+      "1             4.9          3.0           1.4          0.2     setosa\n",
+      "2             4.7          3.2           1.3          0.2     setosa\n",
+      "3             4.6          3.1           1.5          0.2     setosa\n",
+      "4             5.0          3.6           1.4          0.2     setosa\n",
+      "..            ...          ...           ...          ...        ...\n",
+      "145           6.7          3.0           5.2          2.3  virginica\n",
+      "146           6.3          2.5           5.0          1.9  virginica\n",
+      "147           6.5          3.0           5.2          2.0  virginica\n",
+      "148           6.2          3.4           5.4          2.3  virginica\n",
+      "149           5.9          3.0           5.1          1.8  virginica\n",
+      "\n",
+      "[150 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "seaborn.pair plot(df, vars=['WAGE', 'AGE', 'EDUCATION'],kind='reg') \n"
+   ]
   }
  ],
  "metadata": {
