Can read in wages.txt now

--- a/pyStats.ipynb
+++ b/pyStats.ipynb
@@ -26,22 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "dabcc723-aeea-4a30-a410-d2ce312ac8e9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'urlib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[61], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstatsmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mformula\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ols\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01murlib\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'urlib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -49,7 +37,9 @@
     "from scipy import stats\n",
     "from statsmodels.formula.api import ols\n",
     "import seaborn\n",
-    "import urlib"
+    "import urllib3\n",
+    "import urllib.request\n",
+    "import os"
    ]
   },
   {
@@ -1337,32 +1327,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "3432443f-af66-4f79-a3c3-92abd878179e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'urllib' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[60], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwages.txt\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;66;03m# Download the file if it is not present\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m     \u001b[43murllib\u001b[49m\u001b[38;5;241m.\u001b[39murlretrieve(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttp://lib.stat.cmu.edu/datasets/CPS_85_Wages\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      4\u001b[0m                        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwages.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'urllib' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not os.path.exists('wages.txt'):\n",
     "    # Download the file if it is not present\n",
-    "    urllib.urlretrieve('http://lib.stat.cmu.edu/datasets/CPS_85_Wages',\n",
-    "                       'wages.txt')"
+    "   urllib.request.urlretrieve('http://lib.stat.cmu.edu/datasets/CPS_85_Wages','wages.txt')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "34127f26-d5c5-4294-a530-445b457e225c",
+   "id": "60a8fc2a-f5f3-4298-8ac0-67b095ea3060",
+   "metadata": {},
+   "source": [
+    " ### Give names to the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1f2792b6-a6f2-45ab-b498-4000ed201753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\n",
+    "    'EDUCATION: Number of years of education',\n",
+    "    'SOUTH: 1=Person lives in South, 0=Person lives elsewhere',\n",
+    "    'SEX: 1=Female, 0=Male',\n",
+    "    'EXPERIENCE: Number of years of work experience',\n",
+    "    'UNION: 1=Union member, 0=Not union member',\n",
+    "    'WAGE: Wage (dollars per hour)',\n",
+    "    'AGE: years',\n",
+    "    'RACE: 1=Other, 2=Hispanic, 3=White',\n",
+    "    'OCCUPATION: 1=Management, 2=Sales, 3=Clerical, 4=Service, 5=Professional, 6=Other',\n",
+    "    'SECTOR: 0=Other, 1=Manufacturing, 2=Construction',\n",
+    "    'MARR: 0=Unmarried,  1=Married',\n",
+    "]\n",
+    "short_names = [n.split(':')[0] for n in names]\n",
+    "\n",
+    "data = pd.read_csv('wages.txt', skiprows=27, skipfooter=6, sep=None,header=None, engine='python')\n",
+    "data.columns = short_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ffd61bb-d5c5-4b5b-b61c-321ab2d267d9",
+   "metadata": {},
+   "source": [
+    "### Log-transform the wages, because they typically are increased with multiplicative factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a8605a14-c22f-4465-aa38-f742d9b79a92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['WAGE'] = np.log10(data['WAGE'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05b71131-51b5-43e2-ae3c-99852a85a908",
    "metadata": {},
    "source": [
     "## Pairplot: scatter matrices"
